[package]
name = "lyricframe-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
image = "0.25"
color-thief = "0.2"
vercel_runtime = "2.2.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
rand = "0.10.1"

[[bin]]
name = "index"
path = "api/index.rs"
